Sun Aug 18 14:30:47 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_clock_gettime): Rename POSIX_TIME_CLOCK_REALTIME to
	  ISO_C_TIME_CLOCK_REALTIME.

Sun Aug 18 14:22:45 2013  Tanaka Akira  <akr@fsij.org>

	* configure.in: Revert r42604.  It causes linking librt on systems
	  with newer glibc uselessly.

Sun Aug 18 13:18:38 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (Init_process): Add constants: CLOCK_REALTIME_COARSE,
	  CLOCK_MONOTONIC_COARSE and CLOCK_BOOTTIME.

Sun Aug 18 12:41:50 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (clock_gettime): need to check with -lrt prior to check
	  for the function only.  otherwise -lrt is not linked and the link
	  fails, when ac_cv_func_clock_gettime is cached as yes.

Sun Aug 18 10:05:12 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big2str1): Make an expression more explicit.

Sun Aug 18 03:18:45 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big2str1): Use power_level instead of bitsize(xn).

Sun Aug 18 00:44:58 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (BIGDIVREM_EXTRA_WORDS): Redefine to 1.
	  (bigdivrem_num_extra_words): Removed.
	  (bigdivrem_normal): Simplefied.
	  (big2str_karatsuba): Ditto.

Sat Aug 17 23:25:19 2013  Benoit Daloze  <eregontp@gmail.com>

	* test/ruby/test_time.rb: use the in_timezone() helper
	  and define it at the top with other helpers.

Sat Aug 17 22:20:47 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* time.c (time_mload): ignore auxiliary data, offset and zone, if
	  invalid.  [ruby-core:56648] [Bug #8795]

Sat Aug 17 20:11:49 2013  Benoit Daloze  <eregontp@gmail.com>

	* process.c: [DOC] MACH_ABSOLUTE_TIME_CLOCK_MONOTONIC is an
	  available emulation for a monotonic clock on Darwin.
	  https://developer.apple.com/library/mac/qa/qa1398/_index.html

Fri Aug 16 18:12:05 2013  Koichi Sasada  <ko1@atdot.net>

	* test/profile_test_all.rb: fix typo.

Fri Aug 16 18:09:20 2013  Koichi Sasada  <ko1@atdot.net>
